apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        hardware-type: intel-gpu
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            gpu.intel.com/i915: 1
            memory: 2048Mi
        ports:
        - containerPort: 32400
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: media
        persistentVolumeClaim:
          claimName: plex-media
